--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,18 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Chirp</title>
+    <link rel="stylesheet" href='{% static "main/css/bootstrap.css" %}' %} media="screen" title="bootstrap css" charset="utf-8">
   </head>
   <body>
-    {% block content %}
-      no content provided
-    {% endblock %}
+    <div class="container">
+      {% block content %}
+        no content provided
+      {% endblock %}
+    </div>
+
 
   </body>
 </html>
