--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,17 @@
 
 {% block content %}
   <h1>Welcome to Chirp</h1>
-{% endblock %}
+  <h4>{{amount}} chirps</h4>
+{% for chirp in  object_list%}
+
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">{{chirp.bird}}</h3>
+    </div>
+    <div class="panel-body">
+      {{chirp.body}}
+    </div>
+  </div>
+  {% endfor %}
+  {% endblock %}
