--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>Chirp</title>
     <link rel="stylesheet" href='{% static "main/css/bootstrap.css" %}' %} media="screen" title="bootstrap css" charset="utf-8">
+    <link rel="stylesheet" href='{% static "main/css/main.css" %}' %} media="screen" title="" charset="utf-8">
+
   </head>
   <body>
     <br>
