--- a/templates/main/profile_form.html
+++ b/templates/main/profile_form.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 <h1>Your Profile</h1>
-<form class="" action="" method="post">
+
+<img src="{{object.photo_url}}" alt="" />
+<br>
+
+<form class="" action="" method="post", enctype="multipart/form-data">
   {% csrf_token %}
   {{form.as_p}}
   <input class='btn btn-success' type="submit" name="submit" value="Update Profile">
